tests/ui/recursion_limit/overflow.stderr
error: `limit` must be a non-negative integer
  --> $DIR/overflow.rs:3:1
   |
LL | #![recursion_limit = "999999999999999999999999"]
   | ^^^^^^^^^^^^^^^^^^^^^--------------------------^
   |                      |
   |                      `limit` is too large

error: `limit` must be a non-negative integer
  --> $DIR/overflow.rs:3:1
   |
LL | #![recursion_limit = "999999999999999999999999"]
   | ^^^^^^^^^^^^^^^^^^^^^--------------------------^
   |                      |
   |                      `limit` is too large
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

